fixed horizontal scroll bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -815,6 +815,7 @@ a {
 .feature {
     gap: 4rem 2rem;
     margin: 6rem 0;
+    overflow: hidden;
 }
 
 .feature:first-of-type {
